    - Added ability to update Towny.jar (replacing config.yml and english yml) with the server running.
    - Added a new permisison node 'towny.top' to restrict access to the towny top commands.
    - Fixed the welcome message so it correctly uses the player name.
v0.73.3:
    - Config and english yml's are now written as UTF-8 encoded to allow for easy editing with foreign characters.
    - Added a depends entry to the config.yml to prevent Towny loading before Multiverse and corrupting worlds.txt
    - Added a white suffix to town and nation chat to fix a compatability issue with herochat.
    - Added getTownName and isWilderness functions to the Towny API (inherit ca.xshade.bukkit.towny.TownyUniverse)
    - If a mayor is deleted due to inactivity a new mayor is chosen from the assistants. If there are no assistants a random resident will be promoted.
    - Removed 'allow_resident_plots' and replaced with a permission node 'towny.town.plot'. This node is required to have access to the plot commands.
    - Blocked creating towns named 'spawn' and renaming towns to 'spawn'. Breaks many other functions if towns are named 'spawn'.
    - Added '/townyadmin nation add [nation] [town]' so admins can force add towns to nations.
    - Fixed '/townyadmin unclaim'.
    - Setup name prefix/suffix at login so names display correctly in other list plugins.
    - Added separate charges for own town spawn travel and public spawn travel (set in config.yml).
    - Players in Enemy nations can no longer use spawn travel to opposing public towns.
    - town claim now tells you if the area is already claimed instead of just the cryptic 'not attached to edge' message.
    - Added 'apply_permission_prefix' to the config.yml allowing better control of what chat modifications Towny applies.
    - Enabled '/townyadmin backup' use from the console.